--- a/src/main/webapp/modulos/conciliadores/listaconciliadorestabla.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadorestabla.xhtml
@@ -3,64 +3,65 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:c="http://java.sun.com/jsp/jstl/core">
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:p="http://primefaces.org/ui">
 
 	<h:head>
 	</h:head>
 
 	<body>
-		<ui:composition>
-		<c:if test="#{seccion == 'content'}">
-			<div class="content">
-				<div class="col-md-12">
-					<div class="box box-primary">
-						<div class="box-header with-border">
-							<h2>Lista de Conciliadores</h2>
-						</div>
-						<div class='box-body'>
-							<h:dataTable class="table table-striped table-hover" value="#{controllerConciliador.listaConciliador()}" var="conciliador">
-								<h:column>
-									<f:facet name="header">#</f:facet>
-									#{conciliador.id}
-									<f:facet name="footer">#</f:facet>
-								</h:column>
-								<h:column>
-									<f:facet name="header">Apellido</f:facet>
-									<img src="http://localhost:8080/Madiba/resources/img/png/#{conciliador.getFoto()}" alt="" class="avatar user-image" />
-									<span class="hidden-xs">#{conciliador.apellido}</span>
-									<f:facet name="footer">Apellido</f:facet>
-								</h:column>
-								<h:column>
-									<f:facet name="header">Nombre</f:facet>
-									#{conciliador.nombre}
-									<f:facet name="footer">Nombre</f:facet>
-								</h:column>
-								<h:column>
-									<f:facet name="header">Especialidad</f:facet>
-									#{conciliador.especialidad}
-									<f:facet name="footer">Especialidad</f:facet>
-								</h:column>
-								<h:column>
-									<f:facet name="header">Experiencia</f:facet>
-									#{conciliador.experiencia}
-									<f:facet name="footer">Experiencia</f:facet>
-								</h:column>
-								<h:column>
-									<f:facet name="header">Telefono</f:facet>
-									#{conciliador.telefono}
-									<f:facet name="footer">Telefono</f:facet>
-								</h:column>
-								<h:column>
-									<f:facet name="header">Email</f:facet>
-									#{conciliador.email}
-									<f:facet name="footer">Email</f:facet>
-								</h:column>
-							</h:dataTable>
+		<ui:composition template="/resources/plantilla/plantilla.xhtml">
+			<ui:define name="content">
+				<div class="content">
+					<div class="col-md-12">
+						<div class="box box-primary">
+							<div class="box-header with-border">
+								<h2>Lista de Conciliadores</h2>
+							</div>
+							<div class='box-body'>
+								<h:dataTable class="table table-striped table-hover" value="#{controllerConciliador.listaConciliador()}" var="conciliador">
+									<h:column>
+										<f:facet name="header">#</f:facet>
+										#{conciliador.id}
+										<f:facet name="footer">#</f:facet>
+									</h:column>
+									<h:column>
+										<f:facet name="header">Apellido</f:facet>
+										<img src="http://localhost:8080/Madiba/resources/img/png/#{conciliador.getFoto()}" alt="" class="avatar user-image" />
+										<span class="hidden-xs">#{conciliador.apellido}</span>
+										<f:facet name="footer">Apellido</f:facet>
+									</h:column>
+									<h:column>
+										<f:facet name="header">Nombre</f:facet>
+										#{conciliador.nombre}
+										<f:facet name="footer">Nombre</f:facet>
+									</h:column>
+									<h:column>
+										<f:facet name="header">Especialidad</f:facet>
+										#{conciliador.especialidad}
+										<f:facet name="footer">Especialidad</f:facet>
+									</h:column>
+									<h:column>
+										<f:facet name="header">Experiencia</f:facet>
+										#{conciliador.experiencia}
+										<f:facet name="footer">Experiencia</f:facet>
+									</h:column>
+									<h:column>
+										<f:facet name="header">Telefono</f:facet>
+										#{conciliador.telefono}
+										<f:facet name="footer">Telefono</f:facet>
+									</h:column>
+									<h:column>
+										<f:facet name="header">Email</f:facet>
+										#{conciliador.email}
+										<f:facet name="footer">Email</f:facet>
+									</h:column>
+								</h:dataTable>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</c:if>
+			</ui:define>
 		</ui:composition>
 	</body>
 </html>
