--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -25,10 +25,10 @@
 				<li class="header">MENU</li>
 				<!-- Optionally, you can add icons to the links -->
 				<li class="active">
-					<a href="/Madiba/index.jsf">
-						<i class="fa fa-home"></i>
-						<span>Inicio</span>
-					</a>
+					<h:outputLink value="/Madiba/index.jsf" >
+				        <i class="fa fa-users"></i>
+						<span>Inicio</span>	
+				    </h:outputLink>
 				</li>
 										    
 				<li class="treeview">
@@ -38,33 +38,24 @@
 				    </h:outputLink>
 					<ul class="treeview-menu">
 						<li>
-							<h:outputLink value="#" >
+							<h:outputLink value="/Madiba/modulos/conciliadores/listaconciliadorestabla.jsf" >
 						        <i class="fa fa-users"></i>
-								<span>Lista Conciliadores</span>	
-						        <f:ajax render=":includeContent :includeFooter" event="click" listener="#{route.setRuta('modulos/conciliadores/listaconciliadorestabla')}" />
+								<span>Lista Conciliadores</span>
 						    </h:outputLink>
 						</li>
 						<li>
-							<h:outputLink value="#" >
+							<h:outputLink value="/Madiba/modulos/conciliadores/listaconciliadores.jsf" >
 						        <i class="fa fa-users"></i>
-								<span>Turno Reparto</span>	
-						        <f:ajax render=":includeContent :includeFooter" event="click" listener="#{route.setRuta('modulos/conciliadores/listaconciliadores')}" />
+								<span>Turno Reparto</span>
 						    </h:outputLink>
 						</li>
 					</ul>
 				</li>
 				<li>
-					<h:outputLink value="#" >
+					<h:outputLink value="/Madiba/modulos/solicitudes/listasolicitudes.jsf" >
 				        <i class="fa fa-users"></i>
-						<span>Lista Solicitudes</span>	
-				        <f:ajax render=":includeContent :includeFooter" event="click" listener="#{route.setRuta('modulos/solicitudes/listasolicitudes')}" />
-				    </h:outputLink>
-				</li>
-				<li class="">
-					<a href="/Madiba/modulos/solicitudes/listasolicitudes.jsf">
-						<i class="fa fa-users"></i>
 						<span>Solicitudes</span>
-					</a>
+				    </h:outputLink>
 				</li>
 				<li class="treeview">
 					<a href="#">
@@ -99,8 +90,7 @@
 						<li>						
 						    <h:outputLink value="#" >
 						        <i class="fa fa-users"></i>
-								<span>Registrar</span>	
-						        <f:ajax render=":includeContent :includeFooter" event="click" listener="#{route.setRuta('modulos/conciliadores/listaconciliadorestabla')}" />
+								<span>Registrar</span>
 						    </h:outputLink>
 						</li>
 					</ul>
