--- a/src/main/webapp/modulos/conciliadores/listaconciliadorestabla.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadorestabla.xhtml
@@ -22,23 +22,27 @@
 								<h:dataTable class="table table-striped table-hover" value="#{controllerConciliador.listaConciliador()}" var="conciliador">
 									<h:column>
 										<f:facet name="header">#</f:facet>
-										#{conciliador.id}
+										#{conciliador.idConciliador}
 										<f:facet name="footer">#</f:facet>
 									</h:column>
 									<h:column>
 										<f:facet name="header">Apellido</f:facet>
-										<img src="http://localhost:8080/Madiba/resources/img/png/#{conciliador.getFoto()}" alt="" class="avatar user-image" />
-										<span class="hidden-xs">#{conciliador.apellido}</span>
+										<img src="http://localhost:8080/Madiba/resources/img/#{conciliador.foto}" alt="" class="avatar user-image" />
+										<span class="hidden-xs">#{conciliador.apellidos}</span>
 										<f:facet name="footer">Apellido</f:facet>
 									</h:column>
 									<h:column>
 										<f:facet name="header">Nombre</f:facet>
-										#{conciliador.nombre}
+										#{conciliador.nombres}
 										<f:facet name="footer">Nombre</f:facet>
 									</h:column>
 									<h:column>
 										<f:facet name="header">Especialidad</f:facet>
-										#{conciliador.especialidad}
+											<ul>
+												<ui:repeat var="especialidad" value="#{conciliador.especialidads}">
+													<li> #{especialidad.nombreEspecialidad} </li>
+												</ui:repeat>
+											</ul>
 										<f:facet name="footer">Especialidad</f:facet>
 									</h:column>
 									<h:column>
@@ -53,8 +57,13 @@
 									</h:column>
 									<h:column>
 										<f:facet name="header">Email</f:facet>
-										#{conciliador.email}
+										#{conciliador.correo}
 										<f:facet name="footer">Email</f:facet>
+									</h:column>
+									<h:column>
+										<f:facet name="header">Egresado</f:facet>
+										#{conciliador.egresado}
+										<f:facet name="footer">Egresado</f:facet>
 									</h:column>
 								</h:dataTable>
 							</div>
