funcional conciliadores con base de datos, añdida vista de audiencia

--- a/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
@@ -23,7 +23,7 @@
 										<label> </label>
 										<h:outputLabel value=" #{conciliador.nombres} " />
 									</i>
-									<small class="label pull-right label-primary">#{conciliador.idConciliador}</small>
+									<small class="label pull-right label-primary">#{conciliador.reparto.turno}</small>
 								</div>
 								<div class='box-body'>
 									<div class="left col-xs-8">
