--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -58,7 +58,7 @@
 				    </h:outputLink>
 				</li>
 				<li>
-					<h:outputLink value="#" >
+					<h:outputLink value="/Madiba/modulos/audiencia/listaaudiencias.jsf" >
 				        <i class="fa fa-users"></i>
 						<span>Audiencia</span>
 				    </h:outputLink>
