--- a/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
@@ -11,6 +11,7 @@
 	<body>
 		<ui:composition template="/resources/plantilla/plantilla.xhtml">		
 			<ui:define name="content">
+			
 				<div class="content">
 					<div class="row">
 					<ui:repeat var="conciliador" value="#{controllerConciliador.listaConciliador()}">
@@ -29,8 +30,8 @@
 									<div class="left col-xs-8">
 										<h:outputLabel value="Especialidad:" />
 										<ul>
-											<ui:repeat var="especialidad" value="#{conciliador.especialidads}">
-												<li> #{especialidad.nombreEspecialidad} </li>
+											<ui:repeat var="especialidad" value="#{conciliador.conciliadorEspecialidads.get(0).especialidad}">
+												<li> #{especialidad.nombre} </li>
 											</ui:repeat>
 										</ul>
 										<h:outputLabel value="Experiencia:"/>
@@ -56,6 +57,8 @@
 					</ui:repeat>
 					</div>
 				</div>
+				#{controllerSolicitud.allSolicitudes().get(0).partes.get(0).apellidos}
+				
 			</ui:define>
 		</ui:composition>
 	</body>
