--- a/src/main/webapp/resources/secciones/header.xhtml
+++ b/src/main/webapp/resources/secciones/header.xhtml
@@ -33,8 +33,8 @@
 					<li class="dropdown user user-menu">
 						<a href="#"	class="dropdown-toggle"> 
 							<!--<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />-->
-							<img src="http://localhost:8080/Madiba/resources/img/png/girl.png" alt="" class="user-image" />
-							<span class="hidden-xs">Jenny Marcela</span>
+							<img src="http://192.168.0.13:8080/Madiba/resources/img/png/girl.png" class="user-image" alt="User Image" />
+							<span class="hidden-xs">#{modelLogin.nickname}</span>
 						</a>
 					</li>
 				</ul>
