--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -12,10 +12,10 @@
 			<div class="user-panel">
 				<div class="pull-left image">
 					<!--<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />-->
-					<img src="http://localhost:8080/Madiba/resources/img/png/girl.png" alt="" class="img-circle img-responsive" />
+					<img src="http://192.168.0.13:8080/Madiba/resources/img/png/girl.png" alt="" class="img-circle img-responsive" />
 				</div>
 				<div class="pull-left info">
-					<p>Jenny Marcela</p>
+					<p>#{modelLogin.nickname}</p>
 					<!-- Status -->
 					<a href="#"><i class="fa fa-circle text-success"></i> Online</a>
 				</div>
