Rutas de imagenes Coregidas catCha con localhost

--- a/src/main/webapp/modulos/conciliadores/listaconciliadorestabla.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadorestabla.xhtml
@@ -26,7 +26,7 @@
 									</h:column>
 									<h:column>
 										<f:facet name="header">Apellido</f:facet>
-										<img src="http://192.168.0.13:8080/Madiba/resources/img/#{conciliador.foto}" alt="" class="avatar user-image" />
+										<h:graphicImage library="img" name="#{conciliador.foto}" alt="" class="avatar user-image" />
 										<span class="hidden-xs">#{conciliador.apellidos}</span>
 									</h:column>
 									<h:column>
