--- a/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
@@ -38,7 +38,7 @@
 										<h:outputText value=" #{conciliador.experiencia} años" />
 									</div>
 									<div class="right col-xs-4 text-center">
-										<img src="http://192.168.0.13:8080/Madiba/resources/img/#{conciliador.foto}" alt="" class="img-circle img-responsive" />
+										<h:graphicImage library="img" name="#{conciliador.foto}" alt="" class="img-circle img-responsive" />
 									</div>
 									<div class="left col-xs-12">
 										<!-- <i class="fa fa-phone" />  -->
