--- a/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
@@ -79,7 +79,7 @@
 		          	</div>			          	
 				</h:panelGroup>
 						        
-		        <div class='box-footer #{controllerSolicitud.seleccionarSolicitud(solicitud.idSolicitud,solicitud.estado)}'>
+		        <h:panelGroup layout="block" styleClass="box-body" style="border-top: 1px solid #f4f4f4;">
 		          	<div class="col-lg-6">
 			            <h:outputLabel value="Pretenciones:" />
 			            <h:outputText style="padding-left:5%" value=" $#{solicitud.cuantia}" />
@@ -88,7 +88,7 @@
 			            <h:outputLabel value="Conciliador por:" />
 			            <h:outputText style="padding-left:5%" value="#{solicitud.designacions.get(solicitud.designacions.size()-1).tipoDesignacion}" />
 		          	</div>
-		        </div>
+		        </h:panelGroup>
 			</h:panelGroup>
 		</h:panelGroup>
 	</ui:composition>
