--- a/src/main/webapp/modulos/solicitudes/tablasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/tablasolicitud.xhtml
@@ -11,10 +11,10 @@
 	<ui:composition>
 		<div class='box-body'>
 						
-			<h:dataTable id="tablaSolicitud" rowClasses="text-center" class="table table-striped table-hover" value="listaSolicitud" var="solicitud">
+			<h:dataTable id="tablaSolicitud" rowClasses="text-center" class="table table-striped table-hover" value="#{listaSolicitud}" var="solicitud">
 				<h:column>
 					<f:facet name="header">Estado</f:facet>					
-					<p:outputLabel value="#{solicitud.estado}" styleClass="label label-#{controllerSolicitud.colorSolicitudEstado(solicitud.estado)}"/>
+					<h:outputLabel value="#{solicitud.estado}" styleClass="label label-#{controllerSolicitud.colorSolicitudEstado(solicitud.estado)}"/>
 				</h:column>
 				
 				<h:column>
